style(swal): fix z-index
CMK-32161

(cherry picked from commit c7e9c23fc8a54136844cdd26938cb03c641aac26)

--- a/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
@@ -1476,6 +1476,11 @@ div.swal2-popup {
     white-space: pre-line;
   }
 
+  div.swal2-html-container,
+  div.swal2-actions {
+    z-index: 0;
+  }
+
   button.swal2-confirm {
     background-color: $success-dimmed;
   }
